Fix focus visible on table row

--- a/client/src/sass/primeng-custom.scss
+++ b/client/src/sass/primeng-custom.scss
@@ -524,6 +524,10 @@ p-table {
         color: pvar(--mainForegroundColor) !important;
       }
     }
+
+    &.focus-visible {
+      border: 1px solid pvar(--mainForegroundColor) !important
+    }
   }
 
   .p-datatable-tbody {
